# sari

./: .gitignore  <MagicMock name='mock.db_path' id='4430674784'>.snapshot.1770621478794  <MagicMock name='mock.db_path' id='4433311264'>.snapshot.1770621619646  <MagicMock name='mock.db_path' id='4433852272'>.snapshot.1770621821994  <MagicMock name='mock.db_path' id='4434964368'>.snapshot.1770624075360  <MagicMock name='mock.db_path' id='4436988928'>.snapshot.1770618961206  <MagicMock name='mock.db_path' id='4436996656'>.snapshot.1770603528115  <MagicMock name='mock.db_path' id='4437156464'>.snapshot.1770613410094  <MagicMock name='mock.db_path' id='4439339904'>.snapshot.1770621373595  <MagicMock name='mock.db_path' id='4444077232'>.snapshot.1770626027947  <MagicMock name='mock.db_path' id='4445314352'>.snapshot.1770607238510  <MagicMock name='mock.db_path' id='4448498896'>.snapshot.1770613489494  <MagicMock name='mock.db_path' id='4448787760'>.snapshot.1770603222755  <MagicMock name='mock.db_path' id='4452678160'>.snapshot.1770625950369  <MagicMock name='mock.db_path' id='4454740528'>.snapshot.1770602876243  <MagicMock name='mock.db_path' id='4466202944'>.snapshot.1770623878777  <MagicMock name='mock.db_path' id='4476136688'>.snapshot.1770606835104  <MagicMock name='mock.db_path' id='4476301872'>.snapshot.1770603435053  <MagicMock name='mock.db_path' id='4476910096'>.snapshot.1770620899962  <MagicMock name='mock.db_path' id='4477703504'>.snapshot.1770603595830  <MagicMock name='mock.db_path' id='4485878448'>.snapshot.1770601874928  <MagicMock name='mock.db_path' id='4486703696'>.snapshot.1770602642533  <MagicMock name='mock.db_path' id='4492123440'>.snapshot.1770607467474  <MagicMock name='mock.db_path' id='4495144144'>.snapshot.1770621137633  <MagicMock name='mock.db_path' id='4499724608'>.snapshot.1770622964116  <MagicMock name='mock.db_path' id='4505385824'>.snapshot.1770621913346  <MagicMock name='mock.db_path' id='4509875376'>.snapshot.1770602785443  <MagicMock name='mock.db_path' id='4509987712'>.snapshot.1770627719337  <MagicMock name='mock.db_path' id='4510062912'>.snapshot.1770601969934  <MagicMock name='mock.db_path' id='4514591616'>.snapshot.1770627615785  <MagicMock name='mock.db_path' id='4514714960'>.snapshot.1770603336939  <MagicMock name='mock.db_path' id='4518065024'>.snapshot.1770602273212  <MagicMock name='mock.db_path' id='4518861456'>.snapshot.1770619588313  <MagicMock name='mock.db_path' id='4519033024'>.snapshot.1770625829280  <MagicMock name='mock.db_path' id='4519637552'>.snapshot.1770626266218  <MagicMock name='mock.db_path' id='4520229392'>.snapshot.1770623965681  <MagicMock name='mock.db_path' id='4520801488'>.snapshot.1770621308115  <MagicMock name='mock.db_path' id='4521166896'>.snapshot.1770621229543  <MagicMock name='mock.db_path' id='4533686624'>.snapshot.1770619326284  <MagicMock name='mock.db_path' id='4543199088'>.snapshot.1770621718147  (+38 more)
.codex-review-loop/: review_round_1.txt
.gemini/: config.toml  settings.json
alembic/: env.py
app/: __init__.py  config.py  db.py  dedup_queue.py  engine_registry.py  http_server.py  indexer.py  main.py  models.py  ranking.py  registry.py  search_engine.py  watcher.py  workspace.py
benchmark_dataset/: bench_0.py  bench_1.py  bench_10.py  bench_100.py  bench_101.py  bench_102.py  bench_103.py  bench_104.py  bench_105.py  bench_106.py  bench_107.py  bench_108.py  bench_109.py  bench_11.py  bench_110.py  bench_111.py  bench_112.py  bench_113.py  bench_114.py  bench_115.py  bench_116.py  bench_117.py  bench_118.py  bench_119.py  bench_12.py  bench_120.py  bench_121.py  bench_122.py  bench_123.py  bench_124.py  bench_125.py  bench_126.py  bench_127.py  bench_128.py  bench_129.py  bench_13.py  bench_130.py  bench_131.py  bench_132.py  bench_133.py  (+260 more)
config/: config.json
docs/: ARCH_DDD_STAGE1.md  ARCH_DDD_STAGE2.md  ARCH_DDD_STAGE3.md  BUG_CLASSIFICATION.md  FAIL_FAST_PRIORITY.md  FASTMCP_PLAN.md  HANDOFF-2026-03-05.md  INDEXING_STABILITY_DESIGN.md  MCP_MIGRATION_PLAN.md  TRANSPORT_ROADMAP.md  TROUBLESHOOTING.md  cli_output_schema.json  handoff-2026-03-06-runtime-accounting.md  lifecycle_contract.md  lsp_language_matrix_schema.json  lsp_real_e2e_runbook.md  workspace_activation_policy.md
mcp/: __init__.py  __main__.py  cli.py  daemon.py  proxy.py  registry.py  server.py  session.py  telemetry.py  test_daemon.py  test_server.py  workspace.py
sari/: __main__.py  main.py
scripts/: benchmark_ab.sh  prune_tokenizer_bundles.bat  query.py  run_tests_isolated.sh  verify_pack1_savings.py
templates/: bootstrap.sh
tests/: SampleController.java  conftest.py  measure_accuracy.py  test_advanced_edge_cases.py  test_advanced_language_patterns.py  test_aggregation_memory_cap.py  test_architecture_isolation.py  test_architecture_modern.py  test_ast_engine.py  test_ast_intelligence.py  test_async_http_server.py  test_async_server.py  test_audit_edge_cases.py  test_benchmark_ab_indexing.py  test_broken_scenarios.py  test_business_logic_smoke.py  test_call_graph_render.py  test_call_graph_service.py  test_catastrophic_scenarios.py  (+290 more)
(+1443 files in other folders)
