[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sari"
dynamic = ["version"]
description = "High-performance local search and indexing engine for large codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "peewee>=3.17.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "filelock>=3.12.0",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
    "click>=8.0.0",
    "pydantic-settings>=2.0.0",
    "polars>=0.20.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
    "python-dotenv>=0.21.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "structlog>=23.1.0",
    "tree-sitter==0.25.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-bash>=0.25.1",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-xml>=0.7.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-yaml>=0.7.2",
    "lindera-python>=0.2.0",
    "tiktoken>=0.5.0",
    "tantivy==0.25.1",
    "pathspec>=0.12.0",
    "watchdog>=4.0.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sari*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "anyio>=4.0.0",
]

[project.scripts]
sari = "sari.main:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sari.version.__version__"}

[tool.coverage.run]
branch = true
source = ["src/sari"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
include = [
    "src/sari/core/db/*.py",
    "src/sari/core/repository/*.py",
    "src/sari/core/services/**/*.py",
    "src/sari/core/parsers/**/*.py",
    "src/sari/mcp/tools/*.py",
]
omit = [
    "src/sari/core/services/search_service.py",
    "src/sari/core/services/call_graph_service.py",
    "src/sari/core/parsers/handlers/go.py",
    "src/sari/core/parsers/handlers/hcl.py",
    "src/sari/core/parsers/handlers/sql.py",
    "src/sari/core/parsers/handlers/vue.py",
    "src/sari/core/parsers/handlers/xml.py",
    "src/sari/mcp/tools/get_snippet.py",
    "src/sari/mcp/tools/grep_and_read.py",
    "src/sari/mcp/tools/index_file.py",
    "src/sari/mcp/tools/guide.py",
    "src/sari/mcp/tools/doctor.py",
    "src/sari/mcp/tools/dry_run_diff.py",
    "src/sari/mcp/tools/_util.py",
    "src/sari/core/repository/failed_task_repository.py",
    "src/sari/core/parsers/ast_engine.py",
    "src/sari/core/parsers/python.py",
    "src/sari/core/services/call_graph/service.py",
    "src/sari/mcp/tools/read_symbol.py",
    "src/sari/mcp/tools/save_snippet.py",
]
