[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sari"
version = "2.0.2"
description = "Redesigned high-performance local search and indexing engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "peewee>=3.17.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pyright>=1.1.396,<2",
    "overrides>=7.7.0,<8",
    "structlog>=23.1.0",
    "click>=8.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "tantivy==0.25.1",
    "pathspec>=0.12.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "watchdog>=4.0.0",
    "rich>=13.0.0",
]

[project.scripts]
sari = "sari.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sari*", "solidlsp*", "serena*", "sensai*"]
