[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sari"
version = "2.0.47"
description = "Redesigned high-performance local search and indexing engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "peewee>=3.17.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pyrefly>=0.57.1,<1",
    "overrides>=7.7.0,<8",
    "structlog>=23.1.0",
    "click>=8.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "tantivy==0.25.1",
    "pathspec>=0.12.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "watchdog>=4.0.0",
    "rich>=13.0.0",
    "db>=0.1.1",
    "tree-sitter>=0.25.2,<0.26",
    "tree-sitter-language-pack>=0.13.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
sari = "sari.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sari*", "solidlsp*", "serena*", "sensai*"]

[tool.setuptools.package-data]
solidlsp = ["language_servers/_vendor/javalight/dist/classpath/*.jar"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
